# RelatePerspectives-sweetspots

./: README.md  pyproject.toml
Datasets/ValNov-new_split/: ValNov_dev_non-aggr_v2.csv  ValNov_test_non-aggr_v2.csv  ValNov_train_non-aggr_v2.csv
Datasets/cimt_argument_concreteness-dataset-selected_split/: Concreteness_dev_non-aggr.csv  Concreteness_test_non-aggr.csv  Concreteness_train_non-aggr.csv  Dataset_Read_Order_Concreteness_test_non-aggr.csv
argperspectives/: run.py
argperspectives/analysis/: replicability.py
argperspectives/datasets/: cimt.py  splits.py  valnov.py
argperspectives/eval/: Utils.py  callbacks.py  loop.py  metrics.py
argperspectives/models/: Recommender.py  RecommenderComponents.py  __init__.py  multiannotator.py  singletask.py
argperspectives/training/: __init__.py  multiannotator.py  recommender.py  singletask.py
experiments/0.1-singletask-cimt/: config.json
experiments/0.1-singletask-cimt-test/: config.json
experiments/0.2-singletask-valnov-3-class/: config.json
experiments/0.2-singletask-valnov-test/: config.json
experiments/2.1-multi-annotator-cimt/: config.json
experiments/2.1-multi-annotator-cimt-complex-retest/: config.json
experiments/2.1-multi-annotator-cimt-test/: config.json
experiments/2.2-multi-annotator-valnov/: config.json
experiments/2.2-multi-annotator-valnov-test/: config.json
experiments/3.1-cimt-recommender-mid-dev-test/: config.json
experiments/3.1-cimt-recommender-similar-parameter/: config.json
experiments/3.1-cimt-recommender-similar-parameter-adavnced/: config.json
(+19 files in other folders)
