[tool.poetry]
name = "argperspectives"
version = "0.1.0"
description = ""
authors = ["Matthias Orlikowski <morlikowski@techfak.uni-bielefeld.de>", "Julia Romberg <julia.romberg@uni-duesseldorf.de>", "Philipp Heinisch <pheinisch@techfak.uni-bielefeld.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
pandas = "^1.3.4"
jupyter = "^1.0.0"
ipykernel = "^6.5.1"
scipy = "^1.7.3"
scikit-learn = "^1.0.2"
torch = {extras = ["cpu"], version = "^1.11.0"}
datasets = "^2.1.0"
transformers = "^4.19.2"
functorch = "^0.1.1"
boostsa = {git = "https://github.com/morlikowski/boostsa.git", rev = "b2082a734e85a9ac8bfa355e519293b586be70d6", develop = true}
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"